--- a/main/02_payments.mdx
+++ b/main/02_payments.mdx
@@ -14,10 +14,10 @@ Get the STRIPE_SECRET_KEY and add it to your `.env` file
 Once again, we don't have to build our own page.
 We Simply redirect the user to Stripe, where he can pay and come back to our site. 
 
-# building our webhook
-In the background, stripe will charge the user, and will inform us when certain events like
-a successfull or canceled payment happens, by communicating with our webhook. A webhook is simply said
-an endpoint where Stripe can send a request to. Open ``payment_bp.py`` and take a look at the "/stripe/webhook" route:
+### building our webhook
+In the background, stripe will charge the user, and inform us when certain events like
+a successfull or cancelled payment happens by communicating with our webhook. A webhook is simply said
+an endpoint where Stripe can send a request to. Open `payment_bp.py` and take a look at the "/stripe/webhook" route:
 
 ```python payment_bp.py
 # --- Webhook ---
@@ -87,23 +87,22 @@ def stripeWebhookRoute():
 ```
 
 Here we receive a message from Stripe and first validate it using our STRIPE_ENDPOINT_SECRET, which you will
-have to set inside ``.env``. This ensures, that only Stripe can send to this endpoint
+have to set inside `.env`. This ensures, that only Stripe can send to this endpoint
 
+Go to the webhook section, add a new webhook with the events `payment_intent.payment_failed`, `payment_intent.succeeded`, and `checkout.session.completed`.
+Then copy the webhook key as "STRIPE_ENDPOINT_SECRET" to `.env`.
 <img src="../images/stripe-wk.png" alt="webhook key in Stripe"/>
 
-After that we handle events accordingly like:
+After the request is verfied we handle an event by:
 - sending an email 
-- calling ``set_user_package`` function (or refunding if it fails)
+- calling `set_user_package` function (or refunding if it fails)
+
+As you can see, we can retrieve information about which user has bought something (email) and which package 
+that user has bought (package_id) from the metadata, since we define those at checkout creation.
 
 
-As you can see, we can retrieve information about 
-- which user has bought something (email)
-- which package that user has bought (package_id)
-from the metadata.
-
-
-# creating the checkout
-Both of this is set when creating the Checkout Session in "/checkout":
+### creating the checkout
+Both of this is set when creating the Checkout Session in "/checkout". 
 
 ```python payment_bp.py
 @payment_bp.get("/checkout/<int:package_id>")
@@ -147,8 +146,8 @@ under More -> Product Catalog
 <img src="../images/stripe_catalog.png" alt="product tab in Stripe"/>
 
 Once you have created two products (one for each package) and have thereby set information such as price, you can
-add it to our ``stripe_packages`` array and map the items to their "package_ids". Create two of those products and
-add them to the `.env` file.
+add it to our ``stripe_packages`` array and map the items to their "package_ids". Create two (or how many you need) 
+of those products and add them to the `.env` file.
 
 ```python payment_bp.py
 stripe_packages = {
@@ -157,7 +156,14 @@ stripe_packages = {
 }
 ```
 
-### connecting Stripe to our webhook
+If you want to send a user to checkout,
+simply redirect him to the "/payment/checkout/package_id" depending on which package he wants.
+
+```html
+<a href="/payment/checkout/2">buy</a>
+``` 
+
+### Pointing Stripe to our webhook
 Lets get back to the webhook part. How does Stripe know where it is located? Once you have deployed your application at it
 is accessible on the World Wide Web (www), you can set the IP or domain name of it inside the Stripe Settings. While we work
 locally, however, we will use a technique called pooling. This means we will regularly ping the Stripe servers and see if any
