--- a/main/04_extras.mdx
+++ b/main/04_extras.mdx
@@ -84,12 +84,14 @@ understand what it is you are actually doing under the hood.
 
 One of these customizations, is the "Content Security Policy" header. It defines, from where our HTMl can load
 content from. By default, it is our server. When later deploying the application, we will serve our static
-content through a CDN, so we whitelist it as a valid origin.
+content through a CDN, so we whitelist it as a valid origin. If you have any other sources you want to allow
+content to be loaded from (for example Plausible Analytics in my case), add them here as well.
 
 ```python app.py
 csp = {
     'default-src': [
         '\'self\'',
+        'plausible.io'
     ],
 }
 if os.getenv("CDN_DOMAIN", None):
@@ -98,7 +100,10 @@ if os.getenv("CDN_DOMAIN", None):
 Talisman(app, content_security_policy=csp)
 ```
 
+### Writing an actual page
+You can check out this Hollywood-level demo on how to quickly add a new page to your application
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Hikh5rC-HKQ?si=6mKmN2WLwiMzH9ew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ### Congrats!
 You now know how to develop quickly using ShipPil. But that is not the end. Continue reading the deployment
-chapter to learn how you can server your newly built application to the World Wide Web
+chapter to learn how you can server your newly built application to the World Wide Web. 
